# tree-sitter-toon

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  TASK_COMPLETION.md  binding.gyp  example.toon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: publish.yml
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: edge_cases.txt  empty_structures.txt  keys.txt  numbers.txt  primitives.txt  root_forms.txt  strings.txt
test/corpus/arrays/: inline.txt  root_level.txt  tabular.txt
test/corpus/delimiters/: all.txt  tab_comprehensive.txt
test/corpus/objects/: basic.txt
test/corpus/spec/: decode.txt
